Test without flag

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,5 +45,5 @@ jobs:
           working-directory: docs
           install-command: npm install
           build: npm run bulma-sass
-          start: JEKYLL_ENV=production jekyll serve --host 127.0.0.1 --port 4000
+          start: jekyll serve --host 127.0.0.1 --port 4000
           wait-on: "http://127.0.0.1:4000"
