--- a/docs/package.json
+++ b/docs/package.json
@@ -10,6 +10,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015-ie": "^6.7.0",
     "clean-css-cli": "^4.3.0",
+    "cypress": "^8.7.0",
     "metalsmith": "^2.3.0",
     "metalsmith-filter": "^1.0.2",
     "node-sass": "^4.13.1",
