--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,3 +47,7 @@ jobs:
           build: npm run bulma-sass
           start: jekyll serve --host 127.0.0.1 --port 4000
           wait-on: "http://127.0.0.1:4000"
+          record: true
+        env:
+          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
