Add responsive button sizes

--- a/docs/package.json
+++ b/docs/package.json
@@ -26,6 +26,7 @@
     "js-watch": "npm run js-build -- --watch",
     "start": "npm run css-watch | npm run js-watch",
     "start-test": "npm run test-scss -- --watch",
-    "test-scss": "node-sass --output-style expanded bulma-test.scss css/bulma-test.css"
+    "test-scss": "node-sass --output-style expanded bulma-test.scss css/bulma-test.css",
+    "test-watch": "npm run test-scss -- --watch"
   }
 }
