Add form tools specs

--- a/docs/package.json
+++ b/docs/package.json
@@ -24,6 +24,8 @@
     "css-cleancss": "cleancss -o css/bulma-docs.min.css css/bulma-docs.css",
     "css-sass": "node-sass --output-style expanded bulma-docs.scss css/bulma-docs.css",
     "css-watch": "npm run css-sass -- --watch",
+    "cypress-open": "./node_modules/.bin/cypress open",
+    "cypress-run": "./node_modules/.bin/cypress run",
     "deploy": "npm run css-build && npm run js-build",
     "js-build": "babel _javascript --out-dir lib",
     "js-watch": "npm run js-build -- --watch",
