--- a/docs/package.json
+++ b/docs/package.json
@@ -10,17 +10,22 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015-ie": "^6.7.0",
     "clean-css-cli": "^5.6.0",
+    "cypress": "^9.6.0",
     "metalsmith": "^2.4.2",
     "metalsmith-filter": "^1.0.2",
     "node-sass": "^7.0.1",
     "postcss-cli": "^9.1.0"
   },
   "scripts": {
+    "bulma-sass": "node-sass --output-style expanded bulma.scss css/bulma.css",
+    "bulma-watch": "npm run bulma-sass -- --watch",
     "css-build": "npm run css-sass && npm run css-autoprefix && npm run css-cleancss",
     "css-autoprefix": "postcss --use autoprefixer --map false --output css/bulma-docs.css css/bulma-docs.css",
     "css-cleancss": "cleancss -o css/bulma-docs.min.css css/bulma-docs.css",
     "css-sass": "node-sass --output-style expanded bulma-docs.scss css/bulma-docs.css",
     "css-watch": "npm run css-sass -- --watch",
+    "cypress-open": "./node_modules/.bin/cypress open",
+    "cypress-run": "./node_modules/.bin/cypress run",
     "deploy": "npm run css-build && npm run js-build",
     "js-build": "babel _javascript --out-dir lib",
     "js-watch": "npm run js-build -- --watch",
