fix: Fix fixed font size on html tag breaking accessibility
close #3588

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bulma",
+  "name": "bulma-no-reset",
   "version": "0.9.4",
   "homepage": "https://bulma.io",
   "author": {
@@ -7,13 +7,13 @@
     "email": "bbxdesign@gmail.com",
     "url": "https://jgthms.com"
   },
-  "description": "Modern CSS framework based on Flexbox",
+  "description": "Bulma fork with no html selector css",
   "main": "bulma.sass",
   "unpkg": "css/bulma.css",
   "style": "bulma/css/bulma.min.css",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jgthms/bulma.git"
+    "url": "git+https://github.com/Eduruiz/bulma-no-reset.git"
   },
   "license": "MIT",
   "keywords": [
@@ -24,7 +24,7 @@
     "framework"
   ],
   "bugs": {
-    "url": "https://github.com/jgthms/bulma/issues"
+    "url": "https://github.com/Eduruiz/bulma-no-reset/issues"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
