Migrate node-sass references to sass

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,5 @@ matrix:
     - language: node_js
       node_js:
         - node
-      before_script:
-        - npm install node-sass
       script:
-        - node test/node-sass/node-sass.js
+        - node test/sass/sass.js
