--- a/package.json
+++ b/package.json
@@ -37,9 +37,9 @@
   },
   "scripts": {
     "build": "npm run build-sass && npm run build-autoprefix && npm run build-cleancss",
-    "build-autoprefix": "postcss --use autoprefixer --map false --output css/bulma.css css/bulma.css",
-    "build-cleancss": "cleancss -o css/bulma.min.css css/bulma.css",
-    "build-sass": "node-sass --output-style expanded --source-map true bulma.sass css/bulma.css",
+    "build-autoprefix": "postcss --use autoprefixer --map false --output css/style.css css/style.css",
+    "build-cleancss": "cleancss -o css/style.min.css css/style.css",
+    "build-sass": "node-sass --output-style expanded --source-map true style.sass css/style.css",
     "clean": "rimraf css",
     "rtl": "npm run rtl-sass && npm run rtl-autoprefix && npm run rtl-cleancss",
     "rtl-sass": "node-sass --output-style expanded --source-map true bulma-rtl.sass css/bulma-rtl.css",
@@ -49,7 +49,7 @@
     "start": "npm run build-sass -- --watch",
     "dev:cloud": "wrangler pages dev --compatibility-date=2023-01-01 ./css",
     "dev:build": "npm run start",
-    "dev": "run-s dev:*"
+    "dev": "run-p dev:*"
   },
   "files": [
     "css",
