--- a/package.json
+++ b/package.json
@@ -31,9 +31,12 @@
     "clean-css-cli": "^5.6.2",
     "node-sass": "^9.0.0",
     "postcss-cli": "^10.1.0",
-    "rimraf": "^5.0.5"
+    "rimraf": "^5.0.5",
+    "stylelint": "^15.11.0",
+    "stylelint-config-standard-scss": "^11.1.0"
   },
   "scripts": {
+    "lint": "stylelint \"**/*.{scss,sass}\" \"!docs/**\" \"!test/**\"",
     "build": "npm run build-sass && npm run build-autoprefix && npm run build-cleancss",
     "build-autoprefix": "postcss --use autoprefixer --map false --output css/bulma.css css/bulma.css",
     "build-cleancss": "cleancss -o css/bulma.min.css css/bulma.css",
