--- a/docs/package.json
+++ b/docs/package.json
@@ -13,16 +13,16 @@
     "cypress": "^13.6.0",
     "metalsmith": "^2.6.2",
     "metalsmith-filter": "^1.0.2",
-    "node-sass": "^9.0.0",
-    "postcss-cli": "^10.1.0"
+    "sass": "^1.69.5",
+    "postcss-cli": "^11.0.0"
   },
   "scripts": {
-    "bulma-sass": "node-sass --output-style expanded bulma.scss css/bulma.css",
+    "bulma-sass": "sass --style expanded bulma.scss css/bulma.css",
     "bulma-watch": "npm run bulma-sass -- --watch",
     "css-build": "npm run css-sass && npm run css-autoprefix && npm run css-cleancss",
     "css-autoprefix": "postcss --use autoprefixer --map false --output css/bulma-docs.css css/bulma-docs.css",
     "css-cleancss": "cleancss -o css/bulma-docs.min.css css/bulma-docs.css",
-    "css-sass": "node-sass --output-style expanded bulma-docs.scss css/bulma-docs.css",
+    "css-sass": "sass --style expanded bulma-docs.scss css/bulma-docs.css",
     "css-watch": "npm run css-sass -- --watch",
     "cypress-open": "./node_modules/.bin/cypress open",
     "cypress-run": "./node_modules/.bin/cypress run",
@@ -31,7 +31,7 @@
     "js-watch": "npm run js-build -- --watch",
     "start": "npm run css-watch | npm run js-watch",
     "start-test": "npm run test-scss -- --watch",
-    "test-scss": "node-sass --output-style expanded bulma-test.scss css/bulma-test.css",
+    "test-scss": "sass --style expanded bulma-test.scss css/bulma-test.css",
     "test-watch": "npm run test-scss -- --watch"
   }
 }
