--- a/bower.json
+++ b/bower.json
@@ -1,19 +1,27 @@
 {
   "name": "bulma",
-  "version": "0.9.4",
+  "version": "1.0.0",
   "homepage": "https://bulma.io",
   "authors": ["jgthms <bbxdesign@gmail.com>"],
   "description": "Modern CSS framework based on Flexbox",
-  "main": "bulma.sass",
-  "keywords": ["css", "sass", "flexbox", "responsive", "framework"],
+  "main": "bulma.scss",
+  "keywords": [
+    "css",
+    "sass",
+    "scss",
+    "flexbox",
+    "grid",
+    "responsive",
+    "framework"
+  ],
   "license": "MIT",
   "ignore": [
     "**/.*",
-    "node_modules",
     "bower_components",
-    "test",
-    "tests",
     "docs",
-    "images"
+    "images",
+    "node_modules",
+    "test",
+    "tests"
   ]
 }
