--- a/docs/package.json
+++ b/docs/package.json
@@ -4,9 +4,6 @@
   "main": "index.html",
   "author": "Jeremy Thomas <bbxdesign@gmail.com> (https://jgthms.com)",
   "license": "MIT",
-  "dependencies": {
-    "sass": "^1.71.1"
-  },
   "scripts": {
     "custom-sass": "sass --style=expanded --load-path=.. --no-source-map _sass/examples/custom.scss assets/css/custom.css",
     "website-sass": "sass --style=expanded --load-path=.. --no-source-map website.scss assets/css/website.css",
@@ -16,6 +13,7 @@
   },
   "devDependencies": {
     "@shopify/prettier-plugin-liquid": "^1.4.4",
-    "prettier": "^3.2.4"
+    "prettier": "^3.2.4",
+    "sass": "^1.71.1"
   }
 }
