--- a/docs/.gitignore
+++ b/docs/.gitignore
@@ -12,6 +12,7 @@ bulma-test.css
 bulma-website-local.sass
 css/bulma-test.css
 css/bulma-docs.css.map
+debug.html
 PUBLISHING.md
 npm-debug.log
 test.html
