--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "minify-all": "npm run minify-bulma && npm run minify-versions",
     "clean": "rimraf css",
     "deploy": "npm run clean && npm run build-all && npm run minify-all",
+    "test": "sass --style=expanded --source-map --watch test.scss css/test.css",
     "start": "npm run build-bulma -- --watch"
   },
   "files": [
